Fix invalid classifier in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
     "Topic :: Desktop Environment",
-    "Topic :: System :: Power (Battery)"
+    "Topic :: Utilities"
 ]
 
 [project.urls]
