--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,12 @@
 [project]
 name = "tlp-battery-boost"
-version = "1.0.0"
+version = "1.1.0"
 description = "A lightweight Tkinter GUI to toggle TLP between normal and full-charge battery modes."
 authors = [
     {name = "Steve Daulton", email =  "SteveDaulton@users.noreply.github.com"}
 ]
-license = {text = "GPL-3.0"}
+license = "GPL-3.0"
+keywords = ["battery", "TLP", "Linux", "Tkinter", "power", "laptop"]
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = []
@@ -26,10 +27,10 @@ classifiers = [
 
 [project.urls]
 homepage = "https://github.com/SteveDaulton/tlp-battery-boost"
+documentation = "https://github.com/SteveDaulton/tlp-battery-boost#readme"
 repository = "https://github.com/SteveDaulton/tlp-battery-boost"
 
 # [project.gui-scripts] broken in Poetry 2.2 (#10481)
-# use [project.scripts] instead - It's the same on Linux.
 [project.scripts]
 battery_boost = "battery_boost.__main__:main"
 
@@ -40,12 +41,12 @@ packages = [
 
 [dependency-groups]
 dev = [
-    "pylint",
-    "flake8 (>=7.3.0,<8.0.0)",
-    "mypy (>=1.18.2,<2.0.0)"
+    "pylint>=4.0.0",
+    "flake8>=7.3.0",
+    "mypy>=1.18.2",
+    "twine >=6.2.0",
 ]
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
-
