--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ classifiers = [
 
 [project.urls]
 homepage = "https://github.com/SteveDaulton/tlp-battery-boost"
-documentation = "https://github.com/SteveDaulton/tlp-battery-boost#readme"
+documentation = "https://stevedaulton.github.io/tlp-battery-boost/"
 repository = "https://github.com/SteveDaulton/tlp-battery-boost"
 
 # [project.gui-scripts] broken in Poetry 2.2 (#10481)
