--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ dev = [
     "mkdocs >=1.6.1",
     "mkdocstrings >=1.0.0",
     "mkdocstrings-python >=2.0.0",
+    "mkdocs-macros-plugin >=1.5.0",
 ]
 
 [build-system]
